--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h1>SunFlowers For You<br><small>(click for more)</small></h1>
+    <h1>SunFlowers For You<br><small>(Pindutin mo para dumami)</small></h1>
     <div class="sunflwr">
       <div class="sunflwr__leaf--left"></div>
       <div class="sunflwr__leaf--right"></div>
